# worldcereal-classification

./: .gitignore  .pre-commit-config.yaml  =2.6  Jenkinsfile  LICENSE  README.md  SEASONS.md  environment.yml  errorlog.out  inference_error_104715.out  inference_output_104715.out  jenkins_pre_install_script.sh  mypy.ini  outputlog.out  pyproject.toml  setup.cfg  setup.py  training_error_104714.out  training_output_104714.out
.github/workflows/: ci.yaml  legend-to-pages.yaml  lint.yaml  pytest-collect.yaml  udp-to-pages.yaml
docs/: parameters_usage_guide.md  temporal_prediction.md
gridsearch_int8_full/: results.json
gridsearch_results/: results.json
gridsearch_results2/: results.json
gridsearch_results3/: results.json
minimal_wc_presto/: ONNX_conversion.py  backend_inference_example_openeo.ipynb  dev_testing.py  inference.py  job-results.json  preprocessing.py  presto_feature_computer.py  test_aggregator.ipynb  test_cropland_gfmap.py  test_presto_fc_gfmap.py  test_prestobackend.py  testing.py  udf_long_worldcereal_inference.py  udf_presto.py  udf_worldcereal_inference.py
minimal_wc_presto/mvp_wc_presto/: dataops.py  dataset.py  masking.py  presto.py  utils.py  world_cereal_inference.py
notebooks/: ESA_trainingcourse_cropmapping.ipynb  LPS_tutorial_custom_croptype.ipynb  README.md  Run_demo_README.txt  baseline_experiments.ipynb  cbutsko_utils.py  croptype_clsfc_experiments.ipynb  debug_embeddings.ipynb  deep_dive.ipynb  eurocrops_map_wcr_edition.csv  get_ndvi_values.ipynb  maize_seasonality_experiments.ipynb  point_extractions_npa.ipynb  rdm_sampling.ipynb  sandbox.ipynb  system_v1_custom_cropland_model.ipynb  system_v1_custom_croptype_model.ipynb  system_v1_custom_model_cropland.ipynb  system_v1_custom_models.ipynb  system_v1_custom_models_private_data.ipynb  system_v1_demo.ipynb  system_v1_inference.ipynb  system_v1_inference_extended.ipynb  test_mvp.ipynb  test_patch_rgb.tiff  utils.py  wc2eurocrops_map.csv  worldcereal_RDM_demo.ipynb  worldcereal_classification_app.ipynb  worldcereal_custom_croptype.ipynb  worldcereal_custom_croptype_app.ipynb  worldcereal_custom_model_PART1.ipynb  worldcereal_default_cropland.ipynb  worldcereal_default_cropland_upscaling.ipynb  worldcereal_default_cropland_upscaling_visual.ipynb  worldcereal_demo_embeddings.ipynb  worldcereal_local_classification.ipynb  worldcereal_preprocessed_inputs.ipynb  worldcereal_private_extractions.ipynb  worldcereal_private_extractions_app.ipynb  (+16 more)
notebooks/ARYA_training/: ARYA_Brazil.ipynb  README.md
notebooks/UN_handbook/: 0_data_preparation.ipynb  WorldCereal_crop_mapping_demo.ipynb
notebooks/catboost_info/: catboost_training.json
notebooks/embeddings/: compute_outlier_scores.ipynb  create_cached_embeddings_from_long_parquets.ipynb  explore_sample_embeddings.ipynb
notebooks/make_udp/: create_worldcereal_crop_extent_udp.ipynb  create_worldcereal_crop_type_udp.ipynb
notebooks/notebook_utils/: auth_utils.py  classfication_app.py  classification_app.py  classifier.py  croptypepicker.py  dateslider.py  embeddings.py  extractions.py  extractions_app.py  job_manager.py  local_inference.py  openeo.py  preprocessed_inputs.py  production.py  query_extractions_app.py  sampling.py  seasons.py  temporal_shift_checker.ipynb  training_app.py  visualization.py
notebooks/patch_to_point/: job_df.parquet  patch_to_point.ipynb  patch_to_point_development.ipynb  rdm_query_example
notebooks/reference_data/: 01_prepare_datasets.ipynb  02_join_extraction_dfs.ipynb  croptypepicker.py  query_rdm.ipynb
notebooks/resources/: binary_cropland_model_presto-finetuned-cropland_random-split_depth=8_lr=0.3_l2leafreg=100.cbm  croptype_classes.json  croptype_multiclass_class2name_map.json  croptype_multiclass_map.json  croptype_sampling_class2name_map.json  croptype_sampling_map.json  croptype_sanity_check_test_split_samples.csv  croptype_seasonality_test_split_samples.csv  eurocrops_map_sampling_edition.csv  eurocrops_map_wcr_edition.csv  presto-ss-wc-ft-ct-30D_test.pt  samples2remove.csv  spatial_generalization_test_split_samples.csv  train_only_samples.csv  wc2eurocrops_map.csv
notebooks/trainings/: 20251020_Spaceborne_EO_tech_agri.ipynb  20251104_cropland_Zambia_Zimbabwe.ipynb  20251106_zmb_accuracy_vs_sample_size.ipynb  20251106_zmb_public_local_demo.ipynb  20260212_Kenya_workshop_croptype.ipynb  20260416_ESTELLA_workshop_Ghana.ipynb  20260505_WorldCereal_Tunisia.ipynb  20260616_WorldCereal_Brazil.ipynb  worldcereal_custom_croptype.ipynb  worldcereal_default_cropland.ipynb
pages/legend/: index.html
pages/worldcereal-legend/: index.html
scripts/: run_inference.py
scripts/active_cropland/: active_cropland_demo.py
scripts/extractions/: extract.py  extract_common.py  extract_meteo.py  extract_optical.py  extract_patches_s1.sh  extract_patches_s2.sh  extract_sar.py  patch_to_point.py  udf_distance_to_cloud.py
scripts/features/: compute_features.py  compute_features.sh
scripts/inference/: collect_inputs.py  compute_embeddings.py  cropland_croptype_mapping.py  cropland_croptype_mapping_local.py  cropland_mapping.py  cropland_mapping_local.py  cropland_mapping_udp.py  croptype_mapping.py  croptype_mapping_local.py  croptype_mapping_udp.py  gridsearch_cpu_inference.py  run_collect_inputs.py  run_collect_inputs.sh  run_compute_embeddings.sh  run_cropland_croptype_mapping.sh  run_cropland_mapping.sh  run_croptype_mapping.sh  run_worldcereal_task_openeo.py
scripts/misc/: build_embeddings_cache.py  clamp_calendars.py  compute_anomaly_scores.py  create_annual_season.py  es_ingest_trainingdata.py  grid_utils.py  legend.py  regenerate_seasonality_lookup.py  season_overlap.py
scripts/spark/: compute_presto_features.py  compute_presto_features.sh  train_catboost.py  train_catboost.sh
scripts/stac/: build_paths.py  catalogue_builder.py  split_catalogue.py
scripts/system_demo/: system_v1.py
scripts/training/: train_worldcerealpixelcatboost_cpu.sh
scripts/udp/: make_udp_extent.py  make_udp_type.py  (+4 more)
tests/: pre_test_script.sh
(+929 files in other folders)
