[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "/src/worldcereal/**",
]
exclude = [
  "/dist",
  "/notebooks",
  "/scripts",
  "/bin",
  "/tests",
]

[tool.hatch.version]
path = "src/worldcereal/_version.py"
pattern = "^__version__ = ['\"](?P<version>[^'\"]+)['\"]$"

[project]
name = "worldcereal"
authors = [
  { name="Kristof Van Tricht" },
  { name="Jeroen Degerickx" },
  { name="Darius Couchard" },
  { name="Christina Butsko" },
]
description = "WorldCereal classification module"
readme = "README.md"
requires-python = ">=3.8"
# dynamic = ["version"]
version = "2.0.2"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "openeo>=0.22.0",
    "xarray>=2022.3.0",
    "rioxarray>=0.13.0",
    "loguru>=0.7.2",
    "geojson",
    "numpy<2.0.0",
    "netcdf4<=1.6.4",
    "h5netcdf>=1.1.0",
    "openeo>=0.31.0",
    "openeo-gfmap",
    "cftime",
    "pytest-depends",
    "pyarrow",
    "geopandas",
    "pydantic>=2.6",
    "scipy",
  ]

[project.urls]
"Homepage" = "https://github.com/WorldCereal/worldcereal-classification"
"Bug Tracker" = "https://github.com/WorldCereal/worldcereal-classification/issues"

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "matplotlib>=3.3.0"
]
train = [
  "catboost==1.2.5",
  "presto-worldcereal==0.1.2",
  "scikit-learn==1.5.0",
  "torch==2.3.1",
  "ipywidgets==8.1.3",
  "duckdb==1.0.0"
]

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
addopts = [
  "--import-mode=prepend",
]

[tool.isort]
profile = "black"

[tool.ruff]
# line-length = 88

[tool.ruff.lint]
select = ["E", "F"]
ignore = [
  "E501",  # Ignore "line-too-long" issues, let black handle that.
]
