[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  "/dist",
  "/notebooks",
  "/scripts",
  "/bin",
  "/tests",
]

[tool.hatch.version]
path = "src/worldcereal/_version.py"
pattern = "^__version__ = ['\"](?P<version>[^'\"]+)['\"]$"

[project]
name = "worldcereal"
authors = [
  { name="Kristof Van Tricht" },
  { name="Jeroen Degerickx" },
  { name="Darius Couchard" },
  { name="Christina Butsko" },
]
description = "WorldCereal classification module"
readme = "README.md"
requires-python = ">=3.8"
# dynamic = ["version"]
version = "2.1.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "boto3==1.35.30",
    "cftime",  
    "geojson",  
    "geopandas",  
    "h3==3.7.7",  
    "h5netcdf>=1.1.0",  
    "loguru>=0.7.2",  
    "netcdf4<=1.6.4",  
    "numpy<2.0.0",  
    "openeo==0.31.0",  
    "openeo-gfmap==0.2.0",  
    "pyarrow",  
    "pydantic==2.8.0",  
    "rioxarray>=0.13.0",  
    "scipy",
    "duckdb>=1.1.0",
    "tqdm",
    "xarray>=2022.3.0"
  ]

[project.urls]
"Homepage" = "https://github.com/WorldCereal/worldcereal-classification"
"Bug Tracker" = "https://github.com/WorldCereal/worldcereal-classification/issues"

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-depends",  
  "matplotlib>=3.3.0"
]
train = [
  "catboost==1.2.5",
  "presto-worldcereal==0.1.6",
  "scikit-learn==1.5.0",
  "torch==2.3.1",
  "ipywidgets==8.1.3",
  "duckdb==1.1.0",
  "pystac==1.10.1",
  "pystac-client==0.8.3"
]

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
addopts = [
  "--import-mode=prepend",
]

[tool.isort]
profile = "black"


[tool.ruff]
# line-length = 88

[tool.ruff.lint]
select = ["E", "F"]
ignore = [
  "E501",  # Ignore "line-too-long" issues, let black handle that.
]
